fix contraste botão voltar e excluir.

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -596,9 +596,9 @@ button:focus-visible {
 }
 
 .feedback-email {
-  color: #007bff;
+  color: #000000;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .feedback-email:hover {
@@ -925,17 +925,18 @@ button:focus-visible {
 }
 
 .botao-excluir-tarefa {
+    font-size: 18px;
     background-color: transparent;
-    border: 1px solid #ef4444;
-    color: #ef4444;
-    padding: 0.25rem 0.75rem;
-    border-radius: 0.75rem;
+    border: 1px solid #000000;
+    color: #000000;
+    padding: 0.25rem 0.25rem;
+    border-radius: 0.50rem;
     cursor: pointer;
     transition: background-color 0.2s, color 0.2s;
 }
 
 .botao-excluir-tarefa:hover {
-    background-color: #ef4444;
+    background-color: #dd0a0a;
     color: white;
 }
 
